# smart-bell

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build_and_test.sh  conanfile.py  requirements.txt
.github/: agents  datasheets  instructions
.github/workflows/: build.yml  release.yml  tirage_and_dispatch.yml
app/: CMakeLists.txt  main.cpp  smart_bell.cpp  smart_bell_main.cpp  tcp_server_example.cpp  uart_example.cpp
app/examples/: CMakeLists.txt  uart_test.cpp
avr/Release/: ATmega328_SMART_BELL_FW.hex  CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
avr/Release/.cmake/api/v1/reply/: cache-v2-2a34a8ac57e781f9b8d8.json  cache-v2-fd96841cd7d268f4d8f0.json  cmakeFiles-v1-3d516112eb58d0387257.json  cmakeFiles-v1-a48de390ebc82ddb0963.json  codemodel-v2-6a10318cf0a06112188a.json  codemodel-v2-ea69da934424ee3d2a3b.json  directory-.-Release-4ba7a4de4d6186df11d1.json  directory-src.Config-Release-b06ab958f7ddab230cf4.json  directory-src.Ethernet-Release-5d82b88201750d631d6b.json  directory-src.MQTT-Release-78c20745f503597d33d5.json  directory-src.Network-Release-e95d71b7562505e1a061.json  directory-src.Serial-Release-7292ca645a39228b8fa2.json  directory-src.System-Release-380890ed585335ad841f.json  index-2026-06-03T04-31-50-0745.json  index-2026-06-03T15-42-34-0608.json  target-ATmega328_APP-Release-9a2c0d6d6904121348de.json  target-ATmega328_CONFIG-Release-9857c9c46d957eefb837.json  target-ATmega328_IOLIBRARY_INTERNET-Release-b3018ff37e52f3698826.json  target-ATmega328_MQTT-Release-13d8ebd7bfb4d6192c92.json  target-ATmega328_NETWORK-Release-11b6f724d3d6dc739851.json  target-ATmega328_PIN_INT-Release-31d5255db81be022a219.json  target-ATmega328_SMART_BELL_FW-Release-456dbf7a6fd2810ae6a2.json  target-ATmega328_SMART_BELL_FW_hex-Release-1fef224d5a49526b6a75.json  target-ATmega328_SPI-Release-cc8619a59aa7c1c70dd2.json  target-ATmega328_TIMER_INT-Release-33d20f72b909cc570e7c.json  target-ATmega328_TIMER_SERVICE-Release-ef8204b2af742a230cb5.json  target-ATmega328_USART-Release-3f47376195720ea57706.json  target-ATmega328_UTILS-Release-6f9a15ad138c9931b45d.json  target-ATmega328_W5500_ETHERNET-Release-a258b9210df5e6a4032e.json  target-ATmega328_W5500_ETHERNET_WIZNET_IOLIBRARY-Release-f603295d3211a36893a1.json  target-ATmega328_WTD-Release-e06177ab3fe8b0cfd45e.json  target-docs-Release-02e5209c563d8de9d992.json  target-load_preset_conan-generated-avr-release-Release-9ab93ef577f2857e2f9d.json  target-run_cmake_format-Release-700b267e2a674c2c41a4.json  target-run_cpplint-Release-d9dd645d6df8fe9d9e00.json  toolchains-v1-bce8a074a40b4b837514.json
avr/Release/app/: ATmega328_SMART_BELL_FW  ATmega328_SMART_BELL_FW.map  Makefile  cmake_install.cmake
avr/Release/src/: Makefile  cmake_install.cmake
avr/Release/src/App/: Makefile  cmake_install.cmake
avr/Release/src/Config/: Makefile  cmake_install.cmake
avr/Release/src/Ethernet/: Makefile  cmake_install.cmake
avr/Release/src/MQTT/: Makefile  cmake_install.cmake
avr/Release/src/Network/: Makefile  cmake_install.cmake
avr/Release/src/Serial/: Makefile  cmake_install.cmake
avr/Release/src/System/: Makefile  cmake_install.cmake
avr/Release/src/Utils/: Makefile  cmake_install.cmake
cmake/: CMakeFormat.cmake  ConanInstall.cmake  CppLinter.cmake  DoxygenDocu.cmake  Install.cmake  Objcopy.cmake  PythonVEnv.cmake
configure/: CMakeLists.txt  project_config_hpp.in
docs/: HARDWARE_SETUP.md  IMPLEMENTATION_SUMMARY.md  MQTT_IMPLEMENTATION.md
docs/smart_bell_kicad/: smart_bell_kicad.kicad_prl  smart_bell_kicad.kicad_pro  smart_bell_kicad.kicad_sch  ~smart_bell_kicad.kicad_sch.lck
generators/: CMakePresets.json  conan_toolchain.cmake  conanbuild.sh  conanbuildenv-release-avr.sh  conanbuildenv-release-x86_64.sh  conanrun.sh  conanrunenv-release-avr.sh  conanrunenv-release-x86_64.sh  deactivate_conanbuild.sh  deactivate_conanbuildenv-release-avr.sh  deactivate_conanrun.sh
public/: SetupEXT_IN_Interrupt.h  SetupTimer.h  SetupWDT.h  blink.h
public/App/: GongController.h  SmartBellApp.h
public/Config/: ConfigManager.h  LightweightConfig.h  UARTCommandParser.h
public/Ethernet/: EmbeddedSocketInterface.h  wizchip_conf.h
public/Ethernet/W5500/: W5500Class.h  W5500Interface.h  w5500.h
public/MQTT/: MQTTClient.h  MinimalMQTT.h
public/Network/: DHCPClient.h  DNSClient.h  MQTTClient.h
public/Serial/: Interface.h  SPI.h  UART.h
public/System/: TimerService.h
public/Utils/: CircularBuffer.h  ProgmemStrings.h
public/utils/: CircularBuffer.h
src/: CMakeLists.txt  SetupEXT_IN_Interrupt.cpp  SetupTimer.cpp  SetupWDT.cpp  blink.cpp
src/App/: CMakeLists.txt  GongController.cpp  SmartBellApp.cpp
src/Config/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.cpp.bak  LightweightConfig.cpp  UARTCommandParser.cpp  UARTCommandParser.cpp.bak  flash_strings.c
src/Ethernet/: CMakeLists.txt  EmbeddedSocketInterface.cpp
src/Ethernet/W5500/: W5500Class.cpp  W5500Interface.cpp
src/MQTT/: CMakeLists.txt  MQTTClient.cpp  MinimalMQTT.cpp
src/Network/: CMakeLists.txt  DHCPClient.cpp  DNSClient.cpp  MQTTClient.cpp
src/Serial/: CMakeLists.txt  SPI.cpp  UART.cpp
src/System/: CMakeLists.txt  TimerService.cpp
src/Utils/: CMakeLists.txt  CircularBuffer.cpp  new_delete.cpp
src/utils/: CMakeLists.txt  CircularBuffer.cpp
style/: .cmake-format.yaml  cpplint_config.json
tests/: CMakeLists.txt  README.md
tests/Config/: ConfigManager_test.cpp  LightweightConfig_test.cpp  UARTCommandParser_test.cpp
tests/Ethernet/: EmbeddedSocketInterface_test.cpp  MockSPI.h  MockWiznetAPI.cpp  MockWiznetAPI.cpp.bak  MockWiznetAPI.h  MockWiznetAPI.h.bak  README.md  TestCompat.h  W5500Interface_test.cpp
tests/MQTT/: MinimalMQTT_test.cpp
tests/Mocks/: AVRHardwareMock.h
tests/Utils/: CircularBuffer_test.cpp
x86_64/Release/: CMakeCache.txt
