set(LIB_WTD_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/SetupWDT.cpp")
set(LIB_WTD_HEADERS "${PROJECT_SOURCE_DIR}/public/SetupWDT.h")

set(LIBRARY_INCLUDES "${PROJECT_SOURCE_DIR}/public" "${CMAKE_BINARY_DIR}/configured/include")

add_library("${LIB_WTD}" STATIC ${LIB_WTD_SOURCES} ${LIB_WTD_HEADERS})
target_include_directories("${LIB_WTD}" PUBLIC ${LIBRARY_INCLUDES})

set(LIB_PININT_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/SetupEXT_IN_Interrupt.cpp")
set(LIB_PININT_HEADERS "${PROJECT_SOURCE_DIR}/public/SetupEXT_IN_Interrupt.h")

add_library("${LIB_PININT}" STATIC ${LIB_PININT_SOURCES} ${LIB_PININT_HEADERS})
target_include_directories("${LIB_PININT}" PUBLIC ${LIBRARY_INCLUDES})

set(LIB_LIB_TIMERINT_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/SetupTimer.cpp")
set(LIB_LIB_TIMERINT_HEADERS "${PROJECT_SOURCE_DIR}/public/SetupTimer.h")

add_library("${LIB_TIMERINT}" STATIC ${LIB_LIB_TIMERINT_SOURCES} ${LIB_LIB_TIMERINT_HEADERS})
target_include_directories("${LIB_TIMERINT}" PUBLIC ${LIBRARY_INCLUDES})

