set(LIB_TIMER_SERVICE_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/TimerService.cpp")
set(LIB_TIMER_SERVICE_HEADERS "${PROJECT_SOURCE_DIR}/public/System/TimerService.h")

add_library("${LIB_TIMER_SERVICE}" STATIC 
    ${LIB_TIMER_SERVICE_SOURCES} 
    ${LIB_TIMER_SERVICE_HEADERS})

target_include_directories("${LIB_TIMER_SERVICE}" PUBLIC ${LIBRARY_INCLUDES})
